test_cases/good/for_loop.lat
int main() {
    int[] arr = new int[15];
    int i = 0;
    while (i < arr.length) {
        arr[i] = i;
        i++;
    }

    for (int i : arr) {
        printInt(i);
    }

    return 0;
}
