test_cases/bad/for_loop_type_mismatch.lat
int main() {
    int[] arr = new array[42];
    for (string s : arr) {
        printString(s);
    }

    return 0;
}
